--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Ermina</string>
-    <string name="SelectBTDeviceTitle">Select Bluetooth Device</string>
+    <string name="ConnectError">Only allowed to connect to one device</string>
+    <string name="failedConnect">Failed connecting to device</string>
+    <string name="SelectDeviceTitle">Select Bluetooth Device</string>
 </resources>
