graphical updates and started working on plant list

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="ConnectError">Only allowed to connect to one device</string>
     <string name="failedConnect">Failed connecting to device</string>
     <string name="SelectDeviceTitle">Select Bluetooth Device</string>
+    <string name="SelectPlantTitle">Select plant configuration</string>
 </resources>
