--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
         https://raw.githubusercontent.com/viltekk/ermina/323b5b8f29f3a5d870b71b3c4cc407fabb556fb0/android/app/src/main/java/se/viltefjall/tekk/ermina/plantdb/plants.xml
     </string>
     <string name="buttonCustom">Custom configuration</string>
+    <string name="customSet">set custom configuration</string>
 </resources>
