--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,8 +5,20 @@
     <string name="SelectDeviceTitle">Select Bluetooth Device</string>
     <string name="SelectPlantTitle">Select plant configuration</string>
     <string name="PlantsURL">
-        https://raw.githubusercontent.com/viltekk/ermina/323b5b8f29f3a5d870b71b3c4cc407fabb556fb0/android/app/src/main/java/se/viltefjall/tekk/ermina/plantdb/plants.xml
+        https://raw.githubusercontent.com/viltekk/ermina/master/android/app/src/main/java/se/viltefjall/tekk/ermina/plantdb/plants.xml
     </string>
     <string name="buttonCustom">Custom configuration</string>
     <string name="customSet">set custom configuration</string>
+    <string name="calibIntro">
+        Calibration is necessary when switching soil or moisture sensor. The process is done by
+        measuring soil moisture when the soil is completely dry and when it is completely wet.
+        Press next to start calibration process.
+    </string>
+    <string name="calibDry">
+        Put the moisture sensor in completely dry soil and press next.
+    </string>
+    <string name="calibWet">
+        Put the moisture sensor in completely wet soil and press next.
+    </string>
+    <string name="calibWait">Measuring, please wait..</string>
 </resources>
